Input: fix abnormal input cursor height on Safari (#14036)

--- a/packages/theme-chalk/src/input.scss
+++ b/packages/theme-chalk/src/input.scss
@@ -80,7 +80,7 @@
     display: inline-block;
     font-size: inherit;
     height: $--input-height;
-    line-height: $--input-height;
+    line-height: 1;
     outline: none;
     padding: 0 15px;
     transition: $--border-transition-base;
@@ -186,7 +186,7 @@
 
     @include e(inner) {
       height: $--input-medium-height;
-      line-height: $--input-medium-height;
+      line-height: 1;
     }
 
     .el-input__icon {
@@ -198,7 +198,7 @@
 
     @include e(inner) {
       height: $--input-small-height;
-      line-height: $--input-small-height;
+      line-height: 1;
     }
 
     .el-input__icon {
@@ -210,7 +210,7 @@
 
     @include e(inner) {
       height: $--input-mini-height;
-      line-height: $--input-mini-height;
+      line-height: 1;
     }
 
     .el-input__icon {
